--- a/centers/templates/centers/add_child.html
+++ b/centers/templates/centers/add_child.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="row justify-content-center">
     <div class="col-md-8">
-        <div class="card-shine p-5">
+        <div class="card-luxury p-5 animate-slide-up delay-1">
             <div class="text-center mb-5">
                 <div class="bg-primary text-white rounded-circle d-inline-flex justify-content-center align-items-center mb-3"
                     style="width: 70px; height: 70px;">
@@ -176,7 +176,7 @@
                 </div>
 
                 <div class="border-top pt-4 mt-5">
-                    <button type="submit" class="btn btn-primary btn-lg w-100 rounded-pill shadow">
+                    <button type="submit" class="btn btn-primary btn-lg w-100 rounded-pill shadow btn-luxury">
                         <i class="fas fa-save me-2"></i>حفظ وإصدار الكرت
                     </button>
                 </div>
